Fix cumulative layout shift Change padding units from % to vw for biography section

--- a/src/style.css
+++ b/src/style.css
@@ -588,7 +588,7 @@ section.hero .container {
   margin-top: 150px;
   height: 840px;
   display: flex;
-  padding: 0 min(10%, 137px);
+  padding: 0 min(10vw, 137px);
   position: relative;
 }
 
